# yaaa

./: .gitignore  .tools-versions  CHANGELOG.md  Cargo.toml  PPA_SETUP.md  README.md  Rakefile  features.md  install.rb  opacity.md  performance.md
.githooks/: pre-commit
.github/workflows/: ppa.yml  release.yml
assets/: logo.icns
debian/: postinst  yaaa.desktop
notes/: focus.md  status.md
repo/: README.md
repo/conf/: distributions
src/: app.rs  backdrop.rs  constants.rs  font_setup.rs  git_status.rs  hotkeys.rs  main.rs  menu.rs  system_monitor.rs  theme.rs
src/config/: mod.rs  recent_projects.rs  settings.rs
src/terminal/: manager.rs  mod.rs  tab.rs
src/ui/: debug.rs  mod.rs  panels.rs  windows.rs
wix/: main.wxs
