[package]
name = "yaaa"
version = "0.3.12"
edition = "2021"
description = "Yet Another AI Agent"

[dependencies]
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "persistence",
] }
log = "0.4"
 egui_term = { git = "https://github.com/OrelSokolov/egui_term.git", rev = "00613fb" }
 arboard = "3.2"
 wgpu = "27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.14"
image = "0.24"
alacritty_terminal = "0.25.1"
rust-fontconfig = "1.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

[build-dependencies]
cargo-deb = "2"

[features]
default = []
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]

[package.metadata.deb]
name = "yaaa"
maintainer = "Oleg Orlov <orelcokolov@gmail.com>"
revision = ""
copyright = "Copyright (C) 2025 Oleg Orlov."
extended-description = """\
Multi-Agent Terminal - Yet Another AI Agent - \
Terminal application with AI agent support.
"""
section = "utils"
priority = "optional"
assets = [
    ["target/release/yaaa", "/usr/bin/yaaa", "755"],
    ["debian/yaaa.desktop", "/usr/share/applications/yaaa.desktop", "644"],
    ["debian/icons/16.png", "/usr/share/icons/hicolor/16x16/apps/yaaa.png", "644"],
    ["debian/icons/32.png", "/usr/share/icons/hicolor/32x32/apps/yaaa.png", "644"],
    ["debian/icons/48.png", "/usr/share/icons/hicolor/48x48/apps/yaaa.png", "644"],
    ["debian/icons/64.png", "/usr/share/icons/hicolor/64x64/apps/yaaa.png", "644"],
    ["debian/icons/128.png", "/usr/share/icons/hicolor/128x128/apps/yaaa.png", "644"],
    ["debian/icons/256.png", "/usr/share/icons/hicolor/256x256/apps/yaaa.png", "644"],
    ["debian/postinst", "/DEBIAN/postinst", "755"],
]
