[package]
name = "yaaa"
version = "0.5.6"
edition = "2021"
description = "YAAA byOrlov"
authors = ["Oleg Orlov <orelcokolov@gmail.com>"]
license = "MIT"

[dependencies]
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wgpu",
    "persistence",
] }
log = "0.4"
egui_term = { git = "https://github.com/OrelSokolov/egui_term.git" }
 arboard = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.14"
image = "0.24"
alacritty_terminal = "0.25.1"
rust-fontconfig = "1.2.1"
git2 = "0.19"
notify-debouncer-mini = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"

[features]
default = ["x11", "wayland"]
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]

[package.metadata.wix]
upgrade-guid = "E42C30AE-2D54-40C5-9A52-5F3C9CBDC7DE"
path-guid = "B5F00811-0320-4FE6-8FE4-F7527DFA1765"
license = false
icon-path = "assets/logo.ico"

[package.metadata.deb]
name = "yaaa"
maintainer = "Oleg Orlov <orelcokolov@gmail.com>"
revision = ""
copyright = "Copyright (C) 2025 Oleg Orlov."
extended-description = """\
Multi-Agent Terminal - YAAA byOrlov - \
Terminal application with AI agent support.
"""
section = "utils"
priority = "optional"
assets = [
    ["target/release/yaaa", "/usr/bin/yaaa", "755"],
    ["debian/yaaa.desktop", "/usr/share/applications/yaaa.desktop", "644"],
    ["debian/icons/16.png", "/usr/share/icons/hicolor/16x16/apps/yaaa.png", "644"],
    ["debian/icons/32.png", "/usr/share/icons/hicolor/32x32/apps/yaaa.png", "644"],
    ["debian/icons/48.png", "/usr/share/icons/hicolor/48x48/apps/yaaa.png", "644"],
    ["debian/icons/64.png", "/usr/share/icons/hicolor/64x64/apps/yaaa.png", "644"],
    ["debian/icons/128.png", "/usr/share/icons/hicolor/128x128/apps/yaaa.png", "644"],
    ["debian/icons/256.png", "/usr/share/icons/hicolor/256x256/apps/yaaa.png", "644"],
    ["debian/postinst", "/DEBIAN/postinst", "755"],
]
